--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Hello World</h1>
-    First Message with HTML
+    <h2>First Message with HTML</h2><p>
+        <b>Thank You!</b>
   </body>
 </html>
